--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 cache_comment2address.json filter=lfs diff=lfs merge=lfs -text
-linguist-language=Jupyter Notebook
+*.rb linguist-language=Jupyter Notebook
 
